# tired-of-keeping-up

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
prompts/: score_article.md
skills/experiment-generator/: SKILL.md
skills/markdown-curator/: SKILL.md
skills/signal-score/: SKILL.md
skills/source-router/: SKILL.md
skills/telegram-digest/: SKILL.md
skills/telegram-format/: SKILL.md
skills/x-ingest/: SKILL.md
x_signal_engine/: __init__.py  cli.py  config.py  ingest.py  markdown_output.py  models.py  official_sources.py  routing.py  scoring.py  sources.py  storage.py  telegram.py  twscrape_patch.py
